[package]
name = "fxsm-derive"
version = "0.3.0"
authors = ["Victor Polevoy <fx@thefx.co>"]

description = "A state machine procedural macro for enums."
license = "MIT"
keywords = ["state", "machine"]

repository = "https://github.com/vityafx/fxsm"

[lib]
name = "fxsm_derive"
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
